# ai-aggregs

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  eslint.config.js  index.html  package.json  redesign.html
.github/workflows/: build.yml
docs/: design-mockup.html  logo-showcase.html  protocol-conversion-deep-dive.html  protocol-conversion-deep-dive.md  protocol-conversion-optimization-design.html  protocol-conversion-optimization-design.md  protocol-conversion-optimization-v2.html  protocol-conversion-optimization-v2.md  protocol-conversion-three-way.html  protocol-conversion-three-way.md  protocol-translation-analysis.html  protocol-translation-analysis.md
preview/: redesign.html
preview/redesign/: app.js  index.html  shared.js  styles.css
preview/redesign/css/: app.css  claude-code.css  dashboard.css  opencode.css  providers.css  settings.css  style.css
preview/redesign/pages/: chat.html  claude-code.html  codex.html  dashboard.html  opencode.html  provider-usage.html  providers.html  settings.html  usage.html
src/: App.css  App.ts  App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen-icon.py  icon.icns
src-tauri/src/: commands.rs  config.rs  converter.rs  db.rs  error.rs  gateway.rs  handler.rs  lib.rs  log_bridge.rs  main.rs  observability.rs  provider.rs  router.rs  state.rs  stream.rs  tray.rs
src-tauri/src/api/: commands.rs  handler.rs  mod.rs  router.rs
src-tauri/src/config/: mod.rs  state.rs  types.rs
src-tauri/src/config/claude/: form.rs  mod.rs
src-tauri/src/config/codex/: form.rs  mod.rs
src-tauri/src/config/opencode/: comments.rs  mod.rs
src-tauri/src/gateway/: convert_helpers.rs  converter.rs  ir.rs  manager.rs  mod.rs  provider.rs  reasoning_bridge.rs  stream.rs  tests.rs  tools.rs
src-tauri/src/gateway/converter/: helpers.rs  mod.rs  request.rs  response.rs
src-tauri/src/gateway/ir/: codec.rs  helpers.rs  mod.rs  stream_codec.rs
src-tauri/src/gateway/ir/codec/: anthropic.rs  chat.rs  mod.rs  responses.rs
src-tauri/src/gateway/ir/relay/: anthropic.rs  chat.rs  mod.rs  responses.rs
src-tauri/src/gateway/stream/: anthropic_to_chat.rs  chat_to_anthropic.rs  chat_to_responses.rs  config.rs  mod.rs  pipeline.rs  responses_to_chat.rs  usage.rs
src-tauri/src/infra/: claude_code.rs  codex.rs  db.rs  error.rs  log_bridge.rs  mod.rs  opencode.rs  process.rs  tray.rs
src/api/: commands.ts
src/components/: AppConfirm.vue  AppModal.vue  AppToast.vue  ChatView.vue  ConfigEditor.vue  GatewayStatusView.vue  ModelCombobox.vue  MultiCombobox.vue  ProviderList.vue
src/composables/: useDialog.ts
src/features/chat/: index.css  index.ts  index.vue
src/features/claude-code-config/: index.css  index.ts  index.vue
src/features/codex-config/: index.css  index.ts  index.vue
src/features/dashboard/: index.css  index.ts  index.vue
src/features/opencode-config/: ModelCombobox.vue  MultiCombobox.vue  index.css  index.ts  index.vue
src/features/provider-usage/: index.ts  index.vue
src/features/providers/: index.css  index.ts  index.vue
src/features/settings/: index.css  index.ts  index.vue
src/features/usage/: index.css  index.ts  index.vue
