[package]
name = "ai-aggregs"
version = "0.1.0"
description = "AI API 聚合网关桌面版"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_aggregs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心（tray-icon 用于系统托盘）
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
# 网关运行时
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
log = "0.4"
log4rs = { version = "1", default-features = false, features = ["all_components", "gzip"] }
# 错误处理
anyhow = "1"
thiserror = "1"
# SQLite 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
