[package]
name = "ai-aggregs"
version = "1.0.0"
description = "AI API 聚合网关桌面版"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_aggregs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心（tray-icon 用于系统托盘）
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
# 网关运行时
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# TOML 解析（Codex 配置 ~/.codex/config.toml）；preserve_order 避免重排用户表格
toml = { version = "0.8", features = ["preserve_order"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio-stream = "0.1"
bytes = "1"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
log = "0.4"
log4rs = { version = "1", default-features = false, features = [
    "rolling_file_appender",
    "compound_policy",
    "fixed_window_roller",
    "size_trigger",
    "time_trigger",
    "pattern_encoder",
    "gzip",
] }
# 错误处理
anyhow = "1"
thiserror = "2"
# SQLite 数据库
rusqlite = { version = "0.32", features = ["bundled"] }
# 时间处理（用量统计按自然日计算 since）
chrono = "0.4"
# 常量时间字符串比较（缓解 consumer key 的 timing attack）
constant_time_eq = "0.3"
# base64 编解码（reasoning_bridge envelope）
base64 = { version = "0.22", default-features = false, features = ["std", "alloc"] }
# sha256 哈希（namespace 工具摊平超长截断）
sha2 = { version = "0.10", default-features = false }
# hex 编码（sha256 后缀）
hex = { version = "0.4", default-features = false, features = ["std", "alloc"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
